force-app/main/default/objects/pse__Skill__c/pse__Skill__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__SkillHelp</customHelpPage>
    <description>Records a certain competency or accreditation. Use skills/certifications to describe staffing requirements for projects and to track individual resource competencies.</description>
    <label>Skill / Certification</label>
    <nameField>
        <label>Skill / Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills and Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>