force-app/main/default/objects/pse__Skill__c/fields/Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>Certification_Name__c</fullName>
    <formula>IF(RecordType.Name=&quot;Certification&quot;,Name,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification Name</label>
    <type>Text</type>
</CustomField>