force-app/main/default/objects/pse__Skill__c/fields/pse__Description__c.field-meta.xml
<CustomField>
    <fullName>pse__Description__c</fullName>
    <description>Text description of this skill or certification.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>