force-app/main/default/objects/pse__Skill__c/fields/pse__Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>pse__Parent_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent of this skill in the skill hierarchy.</description>
    <inlineHelpText>Lookup to the parent in the skills hierarchy. Parent must have a record type of category.</inlineHelpText>
    <label>Parent Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>pse__Skill__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Category</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>pse__Skill__c</referenceTo>
    <relationshipLabel>Category Children</relationshipLabel>
    <relationshipName>Category_Children</relationshipName>
    <type>Lookup</type>
</CustomField>