force-app/main/default/objects/pse__Skill__c/fields/pse__Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Unique_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The unique skill name.</description>
    <label>Unique Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>