force-app/main/default/objects/pse__Skill__c/recordTypes/pse__Category.recordType-meta.xml
<RecordType>
    <fullName>pse__Category</fullName>
    <active>true</active>
    <description>A level in a hierarchy. Skills and certifications can belong to a category.</description>
    <label>Category</label>
</RecordType>