force-app/main/default/objects/pse__Skill__c/recordTypes/pse__Certification.recordType-meta.xml
<RecordType>
    <fullName>pse__Certification</fullName>
    <active>true</active>
    <description>A document relating to a status or a level of achievement.</description>
    <label>Certification</label>
</RecordType>