force-app/main/default/objects/pse__Skill__c/listViews/Certifications.listView-meta.xml
<ListView>
    <fullName>Certifications</fullName>
    <columns>NAME</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Skill_Or_Certification__c</field>
        <operation>equals</operation>
        <value>Certification</value>
    </filters>
    <label>Certifications</label>
</ListView>