force-app/main/default/objects/pse__Skill__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Type__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Skill_Or_Certification__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>