force-app/main/default/objects/pse__Skill__c/listViews/Skills.listView-meta.xml
<ListView>
    <fullName>Skills</fullName>
    <columns>NAME</columns>
    <columns>pse__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>pse__Skill__c.pse__Skill</value>
    </filters>
    <label>Skills</label>
</ListView>